타입스크립트 패키지 설치 및 사용에 관하여

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "strict": true
+    // "typeRoots": ["./node_modules/@types"] //기본값
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
