--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.21",
     "parcel": "^2.8.3",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.192"
   }
 }
